Added first Page and first Data initialization

--- a/ViewExchangeCharts/Pages/FetchData.razor
+++ b/ViewExchangeCharts/Pages/FetchData.razor
@@ -2,6 +2,7 @@
 
 <PageTitle>Weather forecast</PageTitle>
 
+@using Newtonsoft.Json.Linq
 @using ViewExchangeCharts.Data
 @inject WeatherForecastService ForecastService
 
